kubernetes/services/account-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: account-app-service
spec:
  type: ClusterIP
  selector:
    app: account-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
