kubernetes/services/backend-admin-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: account-app-service
spec:
  type: ClusterIP
  selector:
    app: account-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 4000
