kubernetes/services/balance-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: balance-app-service
spec:
  type: ClusterIP
  selector:
    app: balance-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
