kubernetes/services/investment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: investment-app-service
spec:
  type: ClusterIP
  selector:
    app: investment-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3002
