kubernetes/services/payment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-app-service
spec:
  type: ClusterIP
  selector:
    app: payment-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3003
