kubernetes/services/statement-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: statement-app-service
spec:
  type: ClusterIP
  selector:
    app: statement-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3004
