kubernetes/services/transaction-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transaction-app-service
spec:
  type: ClusterIP
  selector:
    app: transaction-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3005
