kubernetes/services/ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fintech-ingress
spec:
  rules:
    - host: fintech.gateway.com
      http:
        paths:
          - path: /frontend-web-app
            pathType: Prefix
            backend:
              service:
                name: frontend-web-service
                port:
                  number: 80
          - path: /backend
            pathType: Prefix
            backend:
              service:
                name: backend-admin-app-service
                port:
                  number: 5000
