kubernetes/services/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-internal-traffic
spec:
  podSelector:
    matchLabels:
      app: backend
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: backend-admin-app
      ports:
        - protocol: TCP
          port: 5000

    - from:
        - podSelector:
            matchLabels:
              app: frontend-web-app
      ports:
        - protocol: TCP
          port: 6000
